fix missing border

--- a/MoonPoemz/assets/css/moonpoems.css
+++ b/MoonPoemz/assets/css/moonpoems.css
@@ -724,20 +724,20 @@ input.progress[value]::-webkit-slider-thumb {
     width: 380px;
     height: 100%;
   }
-  .demos::-webkit-scrollbar {
+  .poems::-webkit-scrollbar {
     width: 1px;
     background-color: transparent;
   }
 
-  .demos::-webkit-scrollbar-track {
+  .poems::-webkit-scrollbar-track {
     background-color: rgba(0,0,0,.65);
   }
 
-  .demos::-webkit-scrollbar-thumb {
+  .poems::-webkit-scrollbar-thumb {
     background-color: rgba(255,255,255,.3);
   }
 
-  .demos::-webkit-scrollbar-thumb:hover {
+  .poems::-webkit-scrollbar-thumb:hover {
     background-color: rgba(255,255,255,.6);
   }
 }
